changing id to pedido

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <th>Número de Seguimiento</th>
                     <th>Destinatario</th>
                     <th>Estado</th>
-                    <th>ID</th>
+                    <th>Pedido</th>
                 </tr>
             </thead>
             <tbody>
