--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <th>Destinatario</th>
                     <th>Estado</th>
                     <th>Pedido</th>
+                    <th>Referencia</th>
                 </tr>
             </thead>
             <tbody>
